--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,8 @@
   <div id="image">
   </div>
   
-  
+  $('#image').append('
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-  
 </body>
 
+$('#theDiv').prepend('<img id="theImg" src="theImg.png" />')
